--- a/docs/create/aws/chatapp/index-chatapp.mdx
+++ b/docs/create/aws/chatapp/index-chatapp.mdx
@@ -25,30 +25,30 @@ There’s been a rise in the number of social media apps that bring social eleme
 
 ### 1. What will you build?
 
-In this tutorial, we will see how to build a realtime chat app built with Flask, Socket.IO and Redis Enterprise Cloud running on Amazon Web Services. This example uses pub/sub features combined with web-sockets for implementing the message communication between client and server.
+In this tutorial, we will see how to build a realtime chat app built with Flask, Socket.IO and Redis Cloud running on Amazon Web Services. This example uses pub/sub features combined with web-sockets for implementing the message communication between client and server.
 
 ![image](chatapp2.png)
 
 ### 2. What will you need?
 
 - Frontend - React, Socket.IO
-- Backend - Python(Flask), Redis Enterprise Cloud hosted on AWS
+- Backend - Python(Flask), Redis Cloud hosted on AWS
 
 ### 3. Getting Started
 
-### Step 1. Sign up for a Free Redis Enterprise Cloud Account
+### Step 1. Sign up for a Free Redis Cloud Account
 
-[Follow this tutorial](https://developer.redis.com/create/aws/redis-on-aws) to sign up for a free Redis Enterprise Cloud account.
+[Follow this tutorial](https://developer.redis.com/create/aws/redis-on-aws) to sign up for a free Redis Cloud account.
 If you already have an existing account, then all you need are your login credentials to access your subscription.
 
 ![image](chatapp3.png)
 
-Choose AWS as the Cloud vendor while creating your new subscription. While creating a new database, ensure that you set your own password. At the end of the database creation process, you will get a Redis Enterprise Cloud database endpoint and port. Save these, you will need them later.
+Choose AWS as the Cloud vendor while creating your new subscription. While creating a new database, ensure that you set your own password. At the end of the database creation process, you will get a Redis Cloud database endpoint and port. Save these, you will need them later.
 
 ![image](chatapp4.png)
 
 :::tip
-You don't need to create an AWS account for setting up your Redis database. Redis Enterprise Cloud on AWS is a fully managed database-as-a-service trusted by thousands of customers for high performance, infinite scalability, true high availability, and best-in-class support.
+You don't need to create an AWS account for setting up your Redis database. Redis Cloud on AWS is a fully managed database-as-a-service trusted by thousands of customers for high performance, infinite scalability, true high availability, and best-in-class support.
 :::
 
 ### Step 2. Clone the repository
