--- a/docs/create/aws/redis-on-aws/index-redis-on-aws.mdx
+++ b/docs/create/aws/redis-on-aws/index-redis-on-aws.mdx
@@ -10,16 +10,16 @@ import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
 
-Redis Enterprise Cloud on AWS is a fully Managed Redis Enterprise as a service. Designed for modern distributed applications, Redis Enterprise Cloud on AWS is known for its high performance, infinite scalability and true high availability.
+Redis Cloud on AWS is fully managed Redis as a service. Designed for modern distributed applications, Redis Cloud on AWS is known for its high performance, infinite scalability and true high availability.
 
-Follow the below steps to setup Redis Enterprise Cloud hosted over AWS Cloud:
+Follow the below steps to setup Redis Cloud hosted over AWS Cloud:
 
 ### Step 1. Create free cloud account
 
-Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
+Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 :::tip
-For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+For a limited time, use **TIGER200** to get **$200** credits on Redis Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
 
@@ -29,7 +29,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 ### Step 2. Create Your subscription
 
-Next, you will have to create Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click "Create your Subscription".
+Next, you will have to create Redis Cloud subscription. In the Redis Cloud menu, click "Create your Subscription".
 
 ![My Image](images/create_subscription.png)
 
