--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -280,5 +280,5 @@ Set up RedisInsight on your local system and get connected to the Redis database
 ### Additional references:
 
 - [Introduction to Azure Functions](https://azure.microsoft.com/en-in/services/functions/)
-- [Fully Managed Redis Enterprise for Azure](https://redis.com/cloud-partners/microsoft-azure/)
-- [Azure Cache for Redis Enterprise & Flash](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/garantiadata.redis_enterprise_1sp_public_preview?ocid=redisga_redis_cloudpartner_cta1)
+- [Fully Managed Redis Cloud for Azure](https://redis.com/cloud-partners/microsoft-azure/)
+- [Azure Cache for Redis Cloud & Flash](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/garantiadata.redis_enterprise_1sp_public_preview?ocid=redisga_redis_cloudpartner_cta1)
