--- a/docs/create/cloud/aws/index-aws.mdx
+++ b/docs/create/cloud/aws/index-aws.mdx
@@ -5,9 +5,9 @@ sidebar_label: AWS
 slug: /create/cloud/aws
 ---
 
-Redis Enterprise Cloud on AWS is a fully Managed Redis Enterprise as a service. Designed for modern distributed applications, Redis Enterprise Cloud on AWS is known for its high performance, infinite scalability and true high availability.
+Redis Cloud on AWS is fully managed Redis as a service. Designed for modern distributed applications, Redis Cloud on AWS is known for its high performance, infinite scalability and true high availability.
 
-Follow the below steps to setup Redis Enterprise Cloud hosted over AWS Cloud:
+Follow the below steps to setup Redis Cloud hosted over AWS Cloud:
 
 ### Step 1. Getting Started
 
