--- a/docs/create/cloud/gcp/index-gcp.mdx
+++ b/docs/create/cloud/gcp/index-gcp.mdx
@@ -5,11 +5,11 @@ sidebar_label: Google Cloud
 slug: /create/cloud/gcp
 ---
 
-Redis Enterprise Cloud delivers fully managed Redis Enterprise as a Service. It offers all the capabilities of Redis Enterprise while taking care of all the operational aspects associated with operating Redis in the most efficient manner on Google Cloud Platform. Redis Enterprise Cloud is built on a complete serverless concept, so users don’t need to deal with nodes and clusters
+Redis Cloud delivers fully managed Redis as a service. It offers all the capabilities of Redis Enterprise while taking care of all the operational aspects associated with operating Redis in the most efficient manner on Google Cloud Platform. Redis Cloud is built on a complete serverless concept, so users don’t need to deal with nodes and clusters
 
 ### Step 1. Getting Started
 
-Launch [Redis Enterprise Cloud page](https://console.cloud.google.com/apis/library/gcp.redisenterprise.com?pli=1) on Google Cloud Platform
+Launch [Redis Cloud page](https://console.cloud.google.com/apis/library/gcp.redisenterprise.com?pli=1) on Google Cloud Platform
 
 ![Google Cloud](gcp2.png)
 
