--- a/docs/develop/deno/index-deno.mdx
+++ b/docs/develop/deno/index-deno.mdx
@@ -39,12 +39,12 @@ https://deno.land/std@0.126.0/examples
 
 In order to use Redis with Deno you will need a Deno Redis client. In the following sections, we will demonstrate the use of [an experimental implementation of a Redis client for Deno](https://deno.land/x/redis@v0.25.3).
 
-### Step 1. Set up a free Redis Enterprise Cloud account
+### Step 1. Set up a free Redis Cloud account
 
-Visit [redis.com/try-free](https://redis.com/try-free) and create [a free Redis Enterprise Cloud account](https://redis.com/try-free/). Once you complete this tutorial, you will be provided with the database endpoint URL and password. Save it for future reference.
+Visit [redis.com/try-free](https://redis.com/try-free) and create [a free Redis Cloud account](https://redis.com/try-free/). Once you complete this tutorial, you will be provided with the database endpoint URL and password. Save it for future reference.
 
 :::tip
-For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+For a limited time, use **TIGER200** to get **$200** credits on Redis Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
 
