--- a/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
+++ b/docs/develop/node/node-crash-course/introductiontomodules/index-introductiontomodules.mdx
@@ -29,7 +29,7 @@ One way to get started with Redis modules is to use the [Redis Stack Docker cont
 - [JSON](https://redis.io/docs/stack/json/) - adds a native JSON data type to Redis.
 - [Probabilistic](https://redis.io/docs/stack/bloom/) - adds native Bloom and Cuckoo filter data types to Redis, plus other probabilistic data structures.
 
-Redis offers Redis Enterprise Cloud, a fully managed service for running and scaling Redis and Redis Stack. [Sign up for Redis Enterprise Cloud](https://redis.com/try-free/) and use the full-featured free tier to try it out!
+Redis offers Redis Cloud, a fully managed service for running and scaling Redis and Redis Stack. [Sign up for Redis Cloud](https://redis.com/try-free/) and use the full-featured free tier to try it out!
 
 ## Using Redis Stack in our Application
 
