--- a/docs/develop/rust/index-rust.mdx
+++ b/docs/develop/rust/index-rust.mdx
@@ -13,7 +13,7 @@ Find tutorials, examples and technical articles that will help you to develop wi
 ### Getting Started
 
 Rust community has built many client libraries that you can find here. For your first steps with Java and Rust, this article will show how to use a popula library: redis-rs
-The web page “Redis Enterprise and Rust” will help you to get started with Redis Enterprise and Rust in a much easier manner.
+The web page “Redis Cloud and Rust” will help you to get started with Redis Cloud and Rust in a much easier manner.
 redis-rs is a rust implementation of a Redis client library.
 It exposes a general purpose interface to Redis and also provides specific helpers for commonly used functionality.
 
@@ -64,7 +64,7 @@ It exposes a general purpose interface to Redis and also provides specific helpe
 
 ### Further References
 
-- [Redis Enterprise and Rust](https://redis.com/lp/redis-enterprise-rust/)
+- [Redis Cloud and Rust](https://redis.com/lp/redis-enterprise-rust/)
 - [Getting Started with Redis & Rust](https://github.com/redis-developer/redis-rust-getting-started)
 
 </TabItem>
