--- a/docs/explore/import/index-import.mdx
+++ b/docs/explore/import/index-import.mdx
@@ -77,7 +77,7 @@ _- **Warning**: Importing data erases all existing content in the database._
 <div class="row">
   <div class="col">
     <RedisCard
-      title="Online Database Migration from Amazon ElastiCache to Redis Enterprise Cloud using RIOT"
+      title="Online Database Migration from Amazon ElastiCache to Redis Cloud using RIOT"
       page="/create/aws/import/database-migration-aws-elasticache-redis-enterprise-cloud"
     />
   </div>
@@ -87,7 +87,7 @@ _- **Warning**: Importing data erases all existing content in the database._
 
 ## Import data into Redis Enterprise
 
-You can easily import data into Redis Enterprise and Redis Enterprise Cloud, take a look to the following documentation:
+You can easily import data into Redis Enterprise and Redis Cloud, take a look to the following documentation:
 
 - [Redis Enterprise Software: Importing Data into a Database](https://docs.redis.com/latest/rs/administering/import-export/importing-data/)
-- [Redis Enterprise Cloud: Databases Backup and Import](https://docs.redis.com/latest/rc/api/examples/back-up-and-import-data/)
+- [Redis Cloud: Databases Backup and Import](https://docs.redis.com/latest/rc/api/examples/back-up-and-import-data/)
