--- a/docs/guides/security/index-security.mdx
+++ b/docs/guides/security/index-security.mdx
@@ -12,7 +12,7 @@ In this section of the site you will learn about Security and Redis.
 - [Redis.io : Security Overview](https://redis.io/topics/security)
 - [Redis.io : ACL](https://redis.io/topics/acl) (Access Control List)
 
-### Redis Enterprise by Redis
+### Redis Cloud by Redis
 
-- [Redis Enterprise Cloud : Security](https://docs.redis.com/latest/rc/security/)
+- [Redis Cloud: Security](https://docs.redis.com/latest/rc/security/)
 - [Tutorial: How to Use SSL/TLS With Redis Enterprise](/guide/security/how-to-use-ssl-tls-with-redis-enterprise/) (`redis-cli`, Java, Python, Node,)
