--- a/docs/howtos/frauddetection/index-frauddetection.mdx
+++ b/docs/howtos/frauddetection/index-frauddetection.mdx
@@ -290,6 +290,6 @@ This creates a dashboard ‘Fraud Stats’. If you get an error while importing 
 ### References and Links
 
 - [Source Code](https://github.com/redis-developer/redis-datasets/tree/master/use-cases/fraud-detection)
-- [Build modern fraud-detection platforms with Redis Enterprise](https://redis.com/solutions/use-cases/fraud-detection/)
-- [Redis Enterprise to Power Modern Fraud-Detection Platforms](https://lp.redis.com/rs/915-NFD-128/images/RedisLabs-Solution-Fraud-Detection.pdf)
-- [LifeLock Counts on Redis Enterprise for Fraud Mitigation](https://redis.com/docs/lifelock-counts-redis-enterprise-fraud-mitigation/)
+- [Build modern fraud-detection platforms with Redis Cloud](https://redis.com/solutions/use-cases/fraud-detection/)
+- [Redis Cloud to Power Modern Fraud-Detection Platforms](https://lp.redis.com/rs/915-NFD-128/images/RedisLabs-Solution-Fraud-Detection.pdf)
+- [LifeLock Counts on Redis Cloud for Fraud Mitigation](https://redis.com/docs/lifelock-counts-redis-enterprise-fraud-mitigation/)
