--- a/docs/howtos/leaderboard/index-leaderboard.mdx
+++ b/docs/howtos/leaderboard/index-leaderboard.mdx
@@ -55,7 +55,7 @@ Provide the values for environment variables (if needed)
 - REDIS_PASSWORD: Redis server password
 ```
 
-If you're using Redis Enterprise Cloud, you must supply DB endpoint, password, port and the name of the database.
+If you're using Redis Cloud, you must supply DB endpoint, password, port and the name of the database.
 In case of local system, the entries look like as shown below:
 
 ```
