--- a/docs/howtos/moviesdatabase/install/index-install.mdx
+++ b/docs/howtos/moviesdatabase/install/index-install.mdx
@@ -7,7 +7,7 @@ slug: /howtos/moviesdatabase/install
 
 You have multiple ways to run Redis Stack:
 
-- using [Redis Cloud](https://redis.com/redis-enterprise-cloud/overview/)
+- using [Redis Cloud](https://redis.com/cloud/overview/)
 - using [Redis Enterprise](https://redis.com/redis-enterprise-software/overview/)
 - using [Docker](https://hub.docker.com/r/redis/redis-stack)
 - using [binaries](https://redis.io/docs/stack/get-started/install/binaries/)
