--- a/docs/howtos/quick-start/index-quick-start.mdx
+++ b/docs/howtos/quick-start/index-quick-start.mdx
@@ -45,7 +45,7 @@ If you have questions related to Redis, come join the [Redis Discord server](htt
 
 There are essentially two ways you can use Redis:
 
-- **Cloud Redis**: A hosted and serverless Redis database-as-a-service (DBaaS). The fastest way to deploy Redis Enterprise via Amazon AWS, Google Cloud Platform, or Microsoft Azure.
+- **Cloud Redis**: A hosted and serverless Redis database-as-a-service (DBaaS). The fastest way to deploy Redis Cloud via Amazon AWS, Google Cloud Platform, or Microsoft Azure.
   - [Getting Started](https://redis.com/try-free)
   - [Videos](https://www.youtube.com/playlist?list=PL83Wfqi-zYZG6uGxBagsbqjpsi2XBEj1K)
   - [Free Sign-up](https://redis.com/try-free)
