--- a/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
@@ -17,10 +17,10 @@ RedisGraph is a Redis module that enables enterprises to process any kind of con
 
 ### Step 1. Create a free Cloud account
 
-Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
+Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 :::tip
-For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+For a limited time, use **TIGER200** to get **$200** credits on Redis Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
 
@@ -45,7 +45,7 @@ You will be provided with Public endpoint URL and "Redis Stack" as the type of d
 
 ### Step 4. Install RedisInsight
 
-RedisInsight is a visual tool that lets you do both GUI- and CLI-based interactions with your Redis database, and so much more when developing your Redis based application. It is a fully-featured pure Desktop GUI client that provides capabilities to design, develop and optimize your Redis application. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. It makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Enterprise Cloud databases.
+RedisInsight is a visual tool that lets you do both GUI- and CLI-based interactions with your Redis database, and so much more when developing your Redis based application. It is a fully-featured pure Desktop GUI client that provides capabilities to design, develop and optimize your Redis application. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. It makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Cloud databases.
 
 You can install Redis Stack on your local system to get RedisInsight GUI tool up and running. Ensure that you have `brew` package installed in your Mac system.
 
@@ -68,9 +68,9 @@ Go to Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI
 
 ![access redisinsight](images/add_database.png)
 
-### Step 6. Enter Redis Enterprise Cloud details
+### Step 6. Enter Redis Cloud details
 
-Add the Redis Enterprise cloud database endpoint, port and password.
+Add the Redis Cloud database endpoint, port and password.
 
 ![access redisinsight](images/database_creds.png)
 
