--- a/docs/howtos/redisgraph/using-redisinsight/index-usingredisinsight.mdx
+++ b/docs/howtos/redisgraph/using-redisinsight/index-usingredisinsight.mdx
@@ -31,7 +31,7 @@ Follow the below steps to see how your data is connected via the RedisInsight Br
 
 ## Step 1. Create Redis database
 
-[Follow this link to create a Redis database](https://developer.redis.com/howtos/redisgraph) using Redis Enterprise Cloud with RedisGraph module enabled
+[Follow this link to create a Redis database](https://developer.redis.com/howtos/redisgraph) using Redis Cloud with RedisGraph module enabled
 
 ![alt_text](deployment.png)
 
