--- a/docs/howtos/shoppingcart/index-shoppingcart.mdx
+++ b/docs/howtos/shoppingcart/index-shoppingcart.mdx
@@ -582,7 +582,7 @@ COMPOSE_PROJECT_NAME=redis-shopping-cart
 
 :::info
 
-In case you’re using Redis Enterprise Cloud instead of localhost, then you need to enter the database endpoint under REDIS_HOST (without port) while rest of the entries like REDIS_PORT and REDIS_PASSWORD are quite obvious
+In case you’re using Redis Cloud instead of localhost, then you need to enter the database endpoint under REDIS_HOST (without port) while rest of the entries like REDIS_PORT and REDIS_PASSWORD are quite obvious
 
 :::
 
