--- a/docs/howtos/solutions/caching-architecture/cache-prefetching/index-cache-prefetching.mdx
+++ b/docs/howtos/solutions/caching-architecture/cache-prefetching/index-cache-prefetching.mdx
@@ -52,7 +52,7 @@ The steps involved in fetching data are as follows:
 
 :::tip
 
-If you use **Redis Enterprise**, cache prefetching is easier due to its support for JSON and search. You also get additional features such as real-time performance, high scalability, resiliency, and fault tolerance. You can also call upon high-availability features such as Active-Active geo-redundancy.
+If you use **Redis Cloud**, cache prefetching is easier due to its support for JSON and search. You also get additional features such as real-time performance, high scalability, resiliency, and fault tolerance. You can also call upon high-availability features such as Active-Active geo-redundancy.
 
 :::
 
@@ -157,4 +157,4 @@ In this tutorial you learned how to use Redis for cache prefetching with a "mast
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [node-redis](https://github.com/redis/node-redis) and [Redis OM for Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/): To view your Redis data or to play with raw Redis commands in the workbench
-- [Try Redis Enterprise for free](https://redis.com/try-free/)
+- [Try Redis Cloud for free](https://redis.com/try-free/)
