--- a/docs/howtos/solutions/microservices/api-gateway-caching/index-api-gateway-caching.mdx
+++ b/docs/howtos/solutions/microservices/api-gateway-caching/index-api-gateway-caching.mdx
@@ -50,7 +50,7 @@ The diagram illustrates how the API gateway uses Redis as a cache for session in
 
 :::tip
 
-Use a **Redis Enterprise Cluster** to get the benefit of linear scaling to ensure API calls perform under peak loads. That also provides 99.999% uptime and Active-Active geo-distribution, which prevents loss of authentication and session data.
+Use a **Redis Cloud Cluster** to get the benefit of linear scaling to ensure API calls perform under peak loads. That also provides 99.999% uptime and Active-Active geo-distribution, which prevents loss of authentication and session data.
 
 :::
 
@@ -216,4 +216,4 @@ To learn more about Redis, check out the additional resources below:
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
-- [Try Redis Enterprise for free](https://redis.com/try-free/)
+- [Try Redis Cloud for free](https://redis.com/try-free/)
