--- a/docs/howtos/solutions/microservices/caching/index-caching.mdx
+++ b/docs/howtos/solutions/microservices/caching/index-caching.mdx
@@ -10,7 +10,7 @@ import Authors from '@theme/Authors';
 import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
 import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis.mdx';
 import SourceCode from '../common-data/microservices-source-code-tip.mdx';
-import RedisEnterprise from '../common-data/redis-enterprise.mdx';
+import RedisCloud from '../common-data/redis-enterprise.mdx';
 
 import cacheMissImage from './images/redis-cache-aside-cache-miss.png';
 import cacheHitImage from './images/redis-cache-aside-cache-hit.png';
@@ -39,7 +39,7 @@ To improve product search in an e-commerce application, you can implement one of
 
 :::tip
 
-If you use **Redis Enterprise**, cache aside is easier due to its support for JSON and search. You also get additional features such as real-time performance, High scalability, resiliency, and fault tolerance. You can also call upon high-availability features such as Active-Active geo-redundancy.
+If you use **Redis Cloud**, cache aside is easier due to its support for JSON and search. You also get additional features such as real-time performance, High scalability, resiliency, and fault tolerance. You can also call upon high-availability features such as Active-Active geo-redundancy.
 
 :::
 
@@ -85,7 +85,7 @@ The cache-aside pattern is useful when you need to:
 
 :::tip
 
-If you use **Redis Enterprise** and a database that uses a JDBC driver, you can take advantage of [<u>**Redis Smart Cache**</u>](https://redis.com/blog/redis-smart-cache/), which lets you add caching to an application without changing the code. [<u>**Click here to learn more!**</u>](https://github.com/redis-field-engineering/redis-smart-cache)
+If you use **Redis Cloud** and a database that uses a JDBC driver, you can take advantage of [<u>**Redis Smart Cache**</u>](https://redis.com/blog/redis-smart-cache/), which lets you add caching to an application without changing the code. [<u>**Click here to learn more!**</u>](https://github.com/redis-field-engineering/redis-smart-cache)
 
 :::
 
@@ -257,4 +257,4 @@ You now know how to use Redis for caching with one of the most common caching pa
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
-- [Try Redis Enterprise for free](https://redis.com/try-free/)
+- [Try Redis Cloud for free](https://redis.com/try-free/)
