--- a/docs/howtos/solutions/microservices/common-data/redis-enterprise.mdx
+++ b/docs/howtos/solutions/microservices/common-data/redis-enterprise.mdx
@@ -1,6 +1,6 @@
-You can use **Redis Enterprise** as a multi-model primary database. Redis Enterprise is a fully managed, highly available, secure, and real-time data platform. It can store data on both RAM or **Flash**. It also supports **Active-Active** (multi-zone read and write replicas) on different cloud vendors, providing extreme high availability and scalability. Active-Active offers global scalability while maintaining local speed for database reads and writes.
+You can use **Redis Cloud** as a multi-model primary database. Redis Cloud is a fully managed, highly available, secure, and real-time data platform. It can store data on both RAM or **Flash**. It also supports **Active-Active** (multi-zone read and write replicas) on different cloud vendors, providing extreme high availability and scalability. Active-Active offers global scalability while maintaining local speed for database reads and writes.
 
-Redis Enterprise has many built-in modular capabilities, making it a unified, real-time data platform. Redis Enterprise is far more than a document database.
+Redis Cloud has many built-in modular capabilities, making it a unified, real-time data platform. Redis Cloud is far more than a document database.
 
 - **JSON**: Persists JSON documents
 - **Search**: Indexes and searches JSON documents
@@ -10,4 +10,4 @@ Redis Enterprise has many built-in modular capabilities, making it a unified, re
 
 Use [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) to view your Redis data or to play with raw Redis commands in the workbench.
 
-If you're interested in diving deeper, try [Redis Enterprise](https://redis.com/try-free) today for free!
+If you're interested in diving deeper, try [Redis Cloud](https://redis.com/try-free) today for free!
