--- a/docs/howtos/solutions/microservices/interservice-communication/index-interservice-communication.mdx
+++ b/docs/howtos/solutions/microservices/interservice-communication/index-interservice-communication.mdx
@@ -10,7 +10,7 @@ import Authors from '@theme/Authors';
 import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce-old.mdx';
 import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis-old.mdx';
 import SourceCode from '../common-data/microservices-source-code-tip-old.mdx';
-import RedisEnterprise from '../common-data/redis-enterprise.mdx';
+import RedisCloud from '../common-data/redis-enterprise.mdx';
 
 <Authors frontMatter={frontMatter} />
 
@@ -380,7 +380,7 @@ For the purposes of our application, we make a call to update the order status i
 
 :::tip
 
-If you use **Redis Enterprise**, you will find that Redis Streams is available on the same multi-tenant data platform you already use for caching. Redis Enterprise also has high availability, message persistence, support for multiple clients, and resiliency with primary/secondary data replication… all built in.
+If you use **Redis Cloud**, you will find that Redis Streams is available on the same multi-tenant data platform you already use for caching. Redis Cloud also has high availability, message persistence, support for multiple clients, and resiliency with primary/secondary data replication… all built in.
 
 :::
 
@@ -400,4 +400,4 @@ That's all there is to it! You now know how to use Redis for streaming as both a
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
-- [Try Redis Enterprise for free](https://redis.com/try-free/)
+- [Try Redis Cloud for free](https://redis.com/try-free/)
