--- a/docs/howtos/solutions/real-time-inventory/common-rti/customer-proofs.mdx
+++ b/docs/howtos/solutions/real-time-inventory/common-rti/customer-proofs.mdx
@@ -1,1 +1,1 @@
-- Redis Enterprise on Google Cloud enables [<u>**Ulta Beauty to build a “digital store of the future”**</u>](https://redis.com/customers/ulta-beauty/)
+- Redis Cloud on Google Cloud Platform enables [<u>**Ulta Beauty to build a “digital store of the future”**</u>](https://redis.com/customers/ulta-beauty/)
