--- a/docs/modules/redisgraph/index-redisgraph.mdx
+++ b/docs/modules/redisgraph/index-redisgraph.mdx
@@ -11,7 +11,7 @@ RedisGraph is a Redis module that enables enterprises to process any kind of con
 
 ### Step 1. Register and subscribe
 
-Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
+Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Cloud
 
 ![RedisGraph](redisgraph1.png)
 
