--- a/docs/modules/redistimeseries/index-redistimeseries.mdx
+++ b/docs/modules/redistimeseries/index-redistimeseries.mdx
@@ -9,7 +9,7 @@ RedisTimeseries is a Redis module that enhances your experience managing time-se
 
 ### Step 1. Register and subscribe
 
-Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
+Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Cloud
 
 ![Redistimeseries](redistimeseries.png)
 
