--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -80,7 +80,7 @@ Open `https://IP:3000` to access grafana. The default username/password is admin
 #### Step 8. Add Redis Database name, Endpoint URL and password
 
 Assuming that you already have Redis server and database up and running in your infrastructure.
-You can also leverage Redis Enterprise Cloud as showcased in the below example.
+You can also leverage Redis Cloud as showcased in the below example.
 
 ![grafana](grafana_datasource4.png)
 
@@ -140,7 +140,7 @@ Open `https://IP:3000` to access Grafana. The default username/password is admin
 #### Step 7. Add Redis Database name, Endpoint URL and password
 
 We'll assume that you already have a Redis server and up and running in your infrastructure.
-You can also leverage Redis Enterprise Cloud as demonstrated below.
+You can also leverage Redis Cloud as demonstrated below.
 
 ![grafana](grafana_datasource4.png)
 
@@ -193,7 +193,7 @@ The project provides a `docker-compose.yml` file tha starts Redis with all modul
 #### Step 7. Add Redis Database name, Endpoint URL and password
 
 We assume that you already have a Redis server up and running in your infrastructure.
-You can also leverage Redis Enterprise Cloud as shown below:
+You can also leverage Redis Cloud as shown below:
 
 ![grafana](grafana_datasource4.png)
 
