--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -40,13 +40,13 @@ Ready to get started? Ok, let’s dive straight in.
 - Install Node - v12.19.0
 - Install NPM - v6.14.8
 
-### Step 1. Sign up for a Free Redis Enterprise Cloud Account
+### Step 1. Sign up for a Free Redis Cloud Account
 
-[Follow this tutorial](https://developer.redis.com/create/aws/redis-on-aws) to sign up for a free Redis Enterprise Cloud account.
+[Follow this tutorial](https://developer.redis.com/create/aws/redis-on-aws) to sign up for a free Redis Cloud account.
 
 ![image](analytics3.png)
 
-Choose AWS as a Cloud vendor while creating your new subscription. At the end of the database creation process, you will get a Redis Enterprise CLoud database endpoint and password. You can save it for later use.
+Choose AWS as a Cloud vendor while creating your new subscription. At the end of the database creation process, you will get a Redis Cloud database endpoint and password. You can save it for later use.
 
 ![image](analytics4.png)
 
@@ -66,7 +66,7 @@ Go to /server folder (cd ./server) and then execute the below command:
  cp .env.example .env
 ```
 
-Open .env file and add Redis Enterprise Cloud Database Endpoint URL, port and password as shown below:
+Open .env file and add Redis Cloud Database Endpoint URL, port and password as shown below:
 
 ```
 
