--- a/docs/create/cloud/rediscloud/index-recloud.mdx
+++ b/docs/create/cloud/rediscloud/index-recloud.mdx
@@ -1,15 +1,15 @@
 ---
 id: index-rediscloud
-title: Create Database using Redis Enterprise Cloud
-sidebar_label: Redis Enterprise Cloud
+title: Create Database using Redis Cloud
+sidebar_label: Redis Cloud
 slug: /create/cloud/rediscloud
 ---
 
-Redis Enterprise Cloud is a fully managed cloud service by Redis. Built for modern distributed applications, Redis Enterprise Cloud enables you to run any query, simple or complex, at sub-millisecond performance at virtually infinite scale without worrying about operational complexity or service availability. With modern probabilistic data structures and extensible data models, including Search, JSON, Graph, and Time Series, you can rely on Redis as your data-platform for all your real-time needs.
+Redis Cloud is a fully managed cloud service by Redis. Built for modern distributed applications, Redis Cloud enables you to run any query, simple or complex, at sub-millisecond performance at virtually infinite scale without worrying about operational complexity or service availability. With modern probabilistic data structures and extensible data models, including Search, JSON, Graph, and Time Series, you can rely on Redis as your data-platform for all your real-time needs.
 
 ### Step 1. Create free cloud account
 
-Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
+Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 ![My Image](tryfree.png)
 
@@ -17,7 +17,7 @@ Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noop
 
 ### Step 2. Create Your subscription
 
-Next, you will have to create Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click "Create your Subscription".
+Next, you will have to create Redis Cloud subscription. In the Redis Cloud menu, click "Create your Subscription".
 
 ![My Image](images/create_subscription.png)
 
