--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -79,7 +79,7 @@ Open https://IP:3000 to access grafana. The default username/password is admin/a
 #### Step 8. Add Redis Database name, Endpoint URL and password
 
 Assuming that you already have Redis server and database up and running in your infrastructure.
-You can also leverage Redis Enterprise Cloud as showcased in the below example.
+You can also leverage Redis Cloud as showcased in the below example.
 
 ![grafana](grafana_datasource4.png)
 
@@ -139,7 +139,7 @@ Open https://IP:3000 to access grafana. The default username/password is admin/a
 #### Step 7. Add Redis Database name, Endpoint URL and password
 
 Assuming that you already have Redis server and database up and running in your infrastructure.
-You can also leverage Redis Enterprise Cloud as showcased in the below example.
+You can also leverage Redis Cloud as showcased in the below example.
 
 ![grafana](grafana_datasource4.png)
 
@@ -192,7 +192,7 @@ Project provides `docker-compose.yml` to start Redis with all modules and Grafan
 #### Step 7. Add Redis Database name, Endpoint URL and password
 
 Assuming that you already have Redis server and database up and running in your infrastructure.
-You can also leverage Redis Enterprise Cloud as showcased in the below example.
+You can also leverage Redis Cloud as showcased in the below example.
 
 ![grafana](grafana_datasource4.png)
 
