--- a/docs/guides/import/index-import.mdx
+++ b/docs/guides/import/index-import.mdx
@@ -73,7 +73,7 @@ _- **Warning**: Importing data erases all existing content in the database._
 <div class="row">
   <div class="col">
     <RedisCard
-      title="Online Database Migration from Amazon ElastiCache to Redis Enterprise Cloud using RIOT"
+      title="Online Database Migration from Amazon ElastiCache to Redis Cloud using RIOT"
       page="/guides/import/database-migration-aws-elasticache-redis-enterprise-cloud"
     />
   </div>
@@ -81,9 +81,9 @@ _- **Warning**: Importing data erases all existing content in the database._
 
 ---
 
-## Import data into Redis Enterprise
+## Import data into Redis Cloud
 
-You can easily import data into Redis Enterprise and Redis Enterprise Cloud, take a look to the following documentation:
+You can easily import data into Redis Enterprise and Redis Cloud, take a look to the following documentation:
 
 - [Redis Enterprise Software: Importing Data into a Database](https://docs.redis.com/latest/rs/databases/import-export/import-data/)
-- [Redis Enterprise Cloud: Databases Backup and Import](https://docs.redis.com/latest/rc/api/examples/back-up-and-import-data/)
+- [Redis Cloud: Databases Backup and Import](https://docs.redis.com/latest/rc/api/examples/back-up-and-import-data/)
