--- a/docs/howtos/solutions/caching-architecture/write-behind/index-write-behind.mdx
+++ b/docs/howtos/solutions/caching-architecture/write-behind/index-write-behind.mdx
@@ -208,4 +208,4 @@ You now know how to use Redis for write-behind caching. It's possible to increme
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
-- [Try Redis Enterprise for free](https://redis.com/try-free/)
+- [Try Redis Cloud for free](https://redis.com/try-free/)
