--- a/docs/operate/provisioning/_azure-cache-terraform-private/index-azure-cache-terraform-private.mdx
+++ b/docs/operate/provisioning/_azure-cache-terraform-private/index-azure-cache-terraform-private.mdx
@@ -1,13 +1,13 @@
 ---
 id: index-azure-cache-terraform-private
-title: Azure Cache for Redis Enterprise using Terraform with Private Link
-sidebar_label: Azure Cache for Redis Enterprise using Terraform with Private Link
+title: Azure Cache for Redis Cloud using Terraform with Private Link
+sidebar_label: Azure Cache for Redis Cloud using Terraform with Private Link
 slug: /operate/provisioning/azure-cache-terraform-private
 ---
 
 Azure Private Link for Azure Cache for Redis provides private connectivity from a virtual network to your cache instance. This means that you can now use Azure Private Link to connect to an Azure Cache for Redis instance from your virtual network via a private endpoint, which is assigned a private IP address in a subnet within the virtual network. It simplifies the network architecture and secures the connection between endpoints in Azure by eliminating data exposure to the public internet. Private Link carries traffic privately, reducing your exposure to threats and helps you meet compliance standards.
 
-Azure Resource Manager (a.k.a AzureRM) is the deployment and management service for Azure. It provides a management layer that enables you to create, update, and delete resources in your Azure account. You can use management features, like access control, locks, and tags, to secure and organize your resources after deployment. The "azurerm_redis_enterprise_cluster" is a resource that manages a Redis Enterprise cluster. This is a template to get started with the 'azurerm_redis_enterprise_cluster' resource available in the 'azurerm' provider with Terraform.
+Azure Resource Manager (a.k.a AzureRM) is the deployment and management service for Azure. It provides a management layer that enables you to create, update, and delete resources in your Azure account. You can use management features, like access control, locks, and tags, to secure and organize your resources after deployment. The "azurerm_redis_enterprise_cluster" is a resource that manages a Redis Cloud cluster. This is a template to get started with the 'azurerm_redis_enterprise_cluster' resource available in the 'azurerm' provider with Terraform.
 
 ### Prerequisites
 
@@ -104,7 +104,7 @@ terraform output redisgeek_config
     allowfullscreen></iframe>
 </div>
 
-##### 2. Do More with Azure Cache for Redis, Enterprise Tiers
+##### 2. Do More with Azure Cache for Redis, Cloud Tiers
 
 <div class="text--center">
   <iframe
@@ -119,6 +119,6 @@ terraform output redisgeek_config
 
 ### References
 
-- [Azure Cache for Redis Enterprise](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/garantiadata.redis_enterprise_1sp_public_preview?ocid=redisga_redislabs_cloudpartner_cta1)
-- [Accelerate Modern Application Delivery with Redis Enterprise on Microsoft Azure](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWGGx3)
+- [Azure Cache for Redis Cloud](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/garantiadata.redis_enterprise_1sp_public_preview?ocid=redisga_redislabs_cloudpartner_cta1)
+- [Accelerate Modern Application Delivery with Redis Cloud on Microsoft Azure](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWGGx3)
 - [Quickstart: Create a Redis Enterprise cache](https://docs.microsoft.com/en-us/azure/azure-cache-for-redis/quickstart-create-redis-enterprise)
